[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodus-memory"
version = "0.1.0"
description = "Persistent, multi-tenant, searchable memory library for Nodus agents"
authors = [{ name = "Shawn Knight" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "nodus-lang>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
db = ["sqlalchemy>=2.0"]
embed = ["numpy>=1.24"]
nltk = ["nltk>=3.8"]
all = ["nodus-memory[db,embed,nltk]"]

[project.scripts]
nodus-memory = "nodus_memory.__main__:main"

[project.entry-points."nodus.nd"]
nodus-memory = "nodus_memory.nd.nd:get_nd_root"

[project.urls]
Homepage = "https://github.com/Masterplanner25/nodus-memory"
Repository = "https://github.com/Masterplanner25/nodus-memory"
Changelog = "https://github.com/Masterplanner25/nodus-memory/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/nodus_memory"]
artifacts = ["src/nodus_memory/nd/*.nd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["nodus_memory"]

[tool.coverage.report]
fail_under = 80
omit = ["*/nodus_memory/__main__.py"]
