[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodus-memory"
version = "0.1.0"
description = "Persistent agent memory: nodes, MAS path addressing, scoring, embedding, and recall"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Masterplanner25" }]
dependencies = ["nodus-events>=0.1.0"]

[project.optional-dependencies]
pgvector = ["sqlalchemy>=2.0.0", "pgvector>=0.4.0", "numpy>=1.24.0"]
openai   = ["openai>=2.0.0"]
test     = ["pytest>=8.0", "pytest-asyncio>=0.21"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nodus_memory*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"