[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodus-memory"
version = "0.1.0"
description = "Persistent agent memory: nodes, MAS path addressing, scoring, embedding, and recall"
authors = [{ name = "Shawn Knight" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
pgvector = ["sqlalchemy>=2.0.0", "pgvector>=0.4.0", "numpy>=1.24.0"]
openai   = ["openai>=2.0.0"]
dev      = ["pytest>=8.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/Masterplanner25/nodus-memory"
Repository = "https://github.com/Masterplanner25/nodus-memory"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodus_memory*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
